Adding type declarations and everything to export them as a TypeScript .d.ts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,25 @@
 *.tar.xz
 *.tar.gz
+.*.swp
+
 ffmpeg-*/
 lame-*/
 libogg-*/
 libvorbis-*/
+libvpx-*/
 opus-*/
+
 tests/out.ogg
 tests/out.opus
 tests/out.webm
+
+node_modules/
+package-lock.json
 tmp-inst/
+
+libav.types.d.ts
 post.js
 exports.json
+
 libav-[0-9]*
 libav.js-[0-9]*.zip
