1) Added two fragments libopen264 and mp4 to support mp4 files. 2) Disabled building some programs which were not needed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.tar.xz
 *.tar.gz
 .*.swp
+.vscode/
 
 ffmpeg-*/
 lame-*/
@@ -8,6 +9,7 @@ libogg-*/
 libvorbis-*/
 libvpx-*/
 opus-*/
+openh264-*/
 
 tests/out.ogg
 tests/out.opus
