--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "libav.js",
-  "version": "3.11.5",
+  "name": "@descript/libav.js",
+  "version": "3.9.12",
   "description": "A compilation of the libraries associated with handling audio and video in ffmpeg—libavformat, libavcodec, libavfilter, libavutil and libswresample—for WebAssembly and asm.js, and thus the web.",
-  "main": "libav-3.11.5.1.2-default.js",
+  "main": "libav-3.9.12-descript.js",
   "types": "libav.types.d.ts",
   "directories": {
     "test": "tests"
