--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "libav.js",
   "version": "3.11.5",
   "description": "A compilation of the libraries associated with handling audio and video in ffmpeg—libavformat, libavcodec, libavfilter, libavutil and libswresample—for WebAssembly and asm.js, and thus the web.",
-  "main": "libav-3.11.5.1.2-default.js",
-  "types": "libav.types.d.ts",
+  "main": "dist/libav-3.11.5.1.2-default.js",
+  "types": "dist/libav.types.d.ts",
   "directories": {
     "test": "tests"
   },
