--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,5 @@
 name: test
-run-name: tests for ${{ github.ref }}
+run-name: tests for ${{ github.sha }}
 on: [push]
 jobs:
   test:
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - uses: mymindstorm/setup-emsdk@v11
+      - uses: mymindstorm/setup-emsdk@v12
         with:
           version: 3.1.43
           actions-cache-folder: 'cache-emsdk'
