Forgetting to include the files is not what I meant...

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -20,6 +20,7 @@ jobs:
         name: Cache dependencies
         with:
           key: cache-dependencies-${{ hashFiles('mk/*') }}
+          path: build/*.tar*
 
       - run: make extract
 
