Adding support for loading a different variant at runtime
The "variant" option (either in LibAV or as an option to LibAV.LibAV)
loads a different variant from the one that libav.js was compiled with.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "make build-all -j9",
+    "build": "make -j9 && make build-all -j9",
     "test": "npm run build && cd tests && node node-test.js --include-slow"
   },
   "repository": {
