The build was killed. Maybe OOM? Removing concurrency.

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -38,4 +38,6 @@ jobs:
       #    name: build
       #    path: libav.js-*.zip
 
+      - run: make
+      - run: make build-all
       - run: npm test
