--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "libav.js",
+  "//version": "The major and minor are our own versioning, while the revision is FFmpeg's major. When updating the version, make sure you update it here (both in version and main), in the README, in the demo, and in tests/harness.js.",
   "version": "4.8.6",
   "description": "A compilation of the libraries associated with handling audio and video in ffmpeg—libavformat, libavcodec, libavfilter, libavutil and libswresample—for WebAssembly and asm.js, and thus the web.",
-  "main": "dist/libav-4.8.6.0.1-default.js",
+  "main": "dist/libav-4.8.6.1.1-default.js",
   "types": "dist/libav.types.d.ts",
   "directories": {
     "test": "tests"
