--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
   "name": "libav.js",
-  "//version": "The major and minor are our own versioning, while the revision is FFmpeg's major. When updating the version, make sure you update it here (both in version and main), in the Makefile.m4 and Makefile, in the README, in the demo, in tools/ff*.js, in tests/harness.js, and in old-tests/libav.js.",
+  "//version": "The major and minor are our own versioning, while the revision is FFmpeg's major. When updating the version, make sure you update it here (both in version and main), in the Makefile.m4 and Makefile, and in the README.",
   "version": "4.10.6",
   "description": "A compilation of the libraries associated with handling audio and video in ffmpeg—libavformat, libavcodec, libavfilter, libavutil and libswresample—for WebAssembly and asm.js, and thus the web.",
-  "main": "dist/libav-4.10.6.1.1-default.js",
+  "main": "dist/libav-default.js",
+  "exports": {
+    ".": {
+      "import": "./dist/libav-default.mjs",
+      "default": "./dist/libav-default.js"
+    },
+    "./default": { "import": "./dist/libav-default.mjs", "default": "./dist/libav-default.js" },
+    "./default-cli": { "import": "./dist/libav-default-cli.mjs", "default": "./dist/libav-default-cli.js" },
+    "./opus": { "import": "./dist/libav-opus.mjs", "default": "./dist/libav-opus.js" },
+    "./opus-af": { "import": "./dist/libav-opus-af.mjs", "default": "./dist/libav-opus-af.js" },
+    "./flac": { "import": "./dist/libav-flac.mjs", "default": "./dist/libav-flac.js" },
+    "./flac-af": { "import": "./dist/libav-flac-af.mjs", "default": "./dist/libav-flac-af.js" },
+    "./wav": { "import": "./dist/libav-wav.mjs", "default": "./dist/libav-wav.js" },
+    "./wav-af": { "import": "./dist/libav-wav-af.mjs", "default": "./dist/libav-wav-af.js" },
+    "./obsolete": { "import": "./dist/libav-obsolete.mjs", "default": "./dist/libav-obsolete.js" },
+    "./webm": { "import": "./dist/libav-webm.mjs", "default": "./dist/libav-webm.js" },
+    "./webm-cli": { "import": "./dist/libav-webm-cli.mjs", "default": "./dist/libav-webm-cli.js" },
+    "./vp8-opus": { "import": "./dist/libav-vp8-opus.mjs", "default": "./dist/libav-vp8-opus.js" },
+    "./vp8-opus-avf": { "import": "./dist/libav-vp8-opus-avf.mjs", "default": "./dist/libav-vp8-opus-avf.js" },
+    "./webcodecs": { "import": "./dist/libav-webcodecs.mjs", "default": "./dist/libav-webcodecs.js" },
+    "./webcodecs-avf": { "import": "./dist/libav-webcodecs-avf.mjs", "default": "./dist/libav-webcodecs-avf.js" }
+  },
   "types": "dist/libav.types.d.ts",
   "directories": {
     "test": "tests"
   },
   "scripts": {
     "build": "make -j9 && make build-all -j9",
-    "test": "npm run build && cd tests && node node-test.js --include-slow"
+    "test": "npm run build && cd tests && node node-test.js --include-slow && node node-test.mjs"
   },
   "repository": {
     "type": "git",
