--- a/configs/configs/av1-opus-avf/config.json
+++ b/configs/configs/av1-opus-avf/config.json
@@ -1,1 +1,1 @@
-["format-ogg","format-webm","parser-opus","codec-libopus","parser-av1","codec-libaom_av1","audio-filters","swscale","video-filters"]
+["format-ogg","format-webm","parser-opus","codec-libopus","parser-av1","decoder-libaom_av1","encoder-libsvtav1","audio-filters","swscale","video-filters"]
