--- a/configs/configs/av1-opus/config.json
+++ b/configs/configs/av1-opus/config.json
@@ -1,1 +1,1 @@
-["format-ogg","format-webm","parser-opus","codec-libopus","parser-av1","codec-libaom_av1"]
+["format-ogg","format-webm","parser-opus","codec-libopus","parser-av1","decoder-libaom_av1","encoder-libsvtav1"]
