Switching to (more modern?) terser

--- a/package.json
+++ b/package.json
@@ -117,7 +117,6 @@
   },
   "homepage": "https://github.com/Yahweasel/libav.js#readme",
   "devDependencies": {
-    "fast-xml-parser": "^4.2.2",
-    "uglify-js": "^3.14.3"
+    "terser": "^5.34.1"
   }
 }
