pcm_f32le should be in wav configs
It costs nothing, and is more helpful for web since web is all float32.

--- a/configs/configs/default/config.json
+++ b/configs/configs/default/config.json
@@ -1,1 +1,1 @@
-["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","audio-filters"]
+["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-pcm_f32le","audio-filters"]
