--- a/configs/configs/default-cli/config.json
+++ b/configs/configs/default-cli/config.json
@@ -1,1 +1,1 @@
-["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","audio-filters","cli"]
+["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-pcm_f32le","audio-filters","cli"]
