--- a/configs/configs/obsolete/config.json
+++ b/configs/configs/obsolete/config.json
@@ -1,1 +1,1 @@
-["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-libvorbis","format-mp3","decoder-mp3","encoder-libmp3lame","audio-filters"]
+["format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-pcm_f32le","codec-libvorbis","format-mp3","decoder-mp3","encoder-libmp3lame","audio-filters"]
