--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "6.3.7",
   "description": "A compilation of the libraries associated with handling audio and video in ffmpeg—libavformat, libavcodec, libavfilter, libavutil and libswresample—for WebAssembly and asm.js, and thus the web.",
   "main": "dist/libav-default.js",
+  "type": "module",
   "types": "dist/libav.types.d.ts",
   "exports": {
     ".": {
