--- a/configs/configs/demuxer-mpeg/config.json
+++ b/configs/configs/demuxer-mpeg/config.json
@@ -1,1 +1,1 @@
-["avformat","avfcbridge","demuxer-mpeg","parser-mpeg4video","parser-mpegaudio","parser-mpegvideo"]
+["avformat","avfcbridge","demuxer-mpeg","parser-aac","parser-mpeg4video","parser-mpegaudio","parser-mpegvideo"]
