--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -3,8 +3,7 @@ run-name: Build and test ${{ github.sha }}
 on: [push]
 jobs:
   build:
-    # This should be ubuntu-latest, but as of 2023-10-06ish, it has problems
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
