--- a/configs/configs/webm-vp9-cli/config.json
+++ b/configs/configs/webm-vp9-cli/config.json
@@ -1,1 +1,1 @@
-["avformat","avcodec","format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-pcm_f32le","audio-filters","libvpx","parser-vp8","codec-libvpx_vp8","swscale","video-filters","parser-vp9","codec-libvpx_vp9","avfilter","swscale","cli"]
+["avformat","avcodec","format-ogg","format-webm","parser-opus","codec-libopus","format-flac","parser-flac","codec-flac","format-wav","codec-pcm_f32le","audio-filters","libvpx","parser-vp8","codec-libvpx_vp8","swscale","video-filters","parser-vp9","codec-libvpx_vp9","avfilter","cli"]
